# sinovar

./: LICENSE  pyproject.toml
experiments/: distance.py
sinovar/: __main__.py
sinovar/annotate/: __init__.py  embedding.py  gui.py  partition.py  reduction.py
sinovar/cli/: app.py  cmd_annotate.py  cmd_distance.py  cmd_embed.py  common.py
sinovar/ctf/: __init__.py  ctf_1d.py  ctf_context.py  wiener_1d.py
sinovar/distance/: __init__.py  streaming.py  tile.py
sinovar/embedding/: __init__.py  affinity.py  diffusion_map.py  pairwise_distance.py
sinovar/filter/: __init__.py  butterworth.py  multiplicity.py
sinovar/geometry/: __init__.py  common_lines.py  euler.py
sinovar/image/: __init__.py  batch_reader.py  image_location.py
sinovar/mask/: __init__.py  raised_cosine.py
sinovar/noise/: __init__.py  calibrate.py  psd.py
sinovar/sinogram/: __init__.py  angles.py  project.py  sample.py
tests/: test_annotate.py
