[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sinovar"
version = "0.1.0"
description = "Non-linear heterogeneity analysis pipeline for CryoEM"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Oier Lauzirika Zarrabeitia", email = "oierlauzu@bizkaia.eu" }
]
requires-python = ">=3.10"
dependencies = [
    "jax",
    "mrcfile",
    "starfile",
    "numpy",
    "pandas",
    "tqdm",
    "scikit-learn"
]

[project.optional-dependencies]
annotate = [
    "matplotlib",
]
dev = [
    "pytest",
    "matplotlib",
]

[project.scripts]
sinovar = "sinovar.__main__:main"

[project.urls]
Repository = "https://github.com/oierlauzi/sinovar"
